variables.RunHalf.scala.error
Compilation error:
RunHalf:9: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
  if (Color.orange){
            ^